# rust-remote-shell

cli/: Cargo.toml
