[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-remote-shell = { path = "../rust-remote-shell" } # cli depends on rust-remote-shell library
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
shellwords = "1.1.0"
